--- a/deploy/index.html
+++ b/deploy/index.html
@@ -1,12 +1,8 @@
-<!DOCTYPE html><html lang="en"><head>
-  <meta charset="utf-8">
-  <title>Tp Arch Web</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-<link rel="stylesheet" href="styles.ef46db3751d8e999.css"></head>
-<body>
-  <app-root></app-root>
-<script src="runtime.177f89b923a72234.js" type="module"></script><script src="polyfills.e191faaadc67519a.js" type="module"></script><script src="main.0fe8ebcc672e31e9.js" type="module"></script>
-
-</body></html>
+<html data-critters-container>
+  <head>
+    <title>Angular App</title>
+  <link rel="stylesheet" href="styles.ef46db3751d8e999.css"></head>
+  <body>
+  <my-app>loading</my-app>
+  <script src="runtime.bd5e9cf698f90acc.js" type="module"></script><script src="polyfills.f66fd1c7f52b83bc.js" type="module"></script><script src="main.f4dd2eb37e6d8d1d.js" type="module"></script></body>
+</html>
